# holy-maiden-bot

./: .env  .gitignore  Cargo.toml  config.toml.ex
assets/locale/: en-GB.json  pt-BR.json
assets/migrations/: down.sql  up.sql
assets/migrations/2024-09-17-201237_users/: up.sql
assets/migrations/2024-09-17-201307_groups/: up.sql
assets/migrations/2024-09-17-201313_characters/: up.sql
src/: config.rs  database.rs  filters.rs  lib.rs  main.rs  utils.rs
src/database/: models.rs
src/handlers/: collect.rs  help.rs  language.rs  list.rs  mod.rs  start.rs
src/middlewares/: mod.rs  save_chat.rs  send_character.rs  set_locale.rs
src/modules/: anilist.rs  conversation.rs  database.rs  i18n.rs  mod.rs
src/routers/: character.rs  collect.rs  help.rs  language.rs  list.rs  mod.rs  send_character.rs  series.rs  start.rs
src/routers/admin/: character.rs  mod.rs  series.rs
