[package]
name = "holy-maiden-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-friendly = { git = "https://github.com/AndrielFR/grammers-friendly", features = [ "macros" ] }
grammers-client = { git = "https://github.com/Lonami/grammers", features = [ "html" ] }
rust-anilist = { git = "https://github.com/AndrielFR/rust-anilist" }

rbs = "4.5.20"
log = "0.4.22"
rand = "0.8.5"
toml = "0.8.19"
tokio = { version = "1.40.0", default-features = false, features = [ "macros", "sync", "signal" ] }
serde = { version = "1.0.210", features = ["derive"] }
rbatis = "4.5.30"
dotenvy = "0.15.7"
reqwest = "0.12.7"
env_logger = "0.11.5"
serde_json = "1.0.128"
async-trait = "0.1.83"
rbdc-sqlite = "4.5.5"
futures-util = { version = "0.3.30", default-features = false, features = [ "alloc" ] }
rbdc-pool-deadpool = "4.5.7"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
