[package]
name = "holy-maiden-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-friendly = { git = "https://github.com/AndrielFR/grammers-friendly", features = [ "macros" ] }
grammers-client = { git = "https://github.com/Lonami/grammers", features = [ "html" ] }
rust-anilist = { git = "https://github.com/AndrielFR/rust-anilist" }

rbs = "4.5.*"
log = "0.4.*"
rand = "0.8.*"
toml = "0.8.*"
tokio = { version = "1.40.*", default-features = false, features = [ "macros", "sync", "signal" ] }
serde = { version = "1.0.*", features = ["derive"] }
chrono = "0.4.*"
rbatis = "4.5.*"
dotenvy = "0.15.*"
reqwest = "0.12.*"
env_logger = "0.11.*"
serde_json = "1.0.*"
async-trait = "0.1.*"
rbdc-sqlite = "4.5.*"
futures-util = { version = "0.3.*", default-features = false, features = [ "alloc" ] }
rbdc-pool-deadpool = "4.5.*"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
