[package]
name = "holy-maiden-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-friendly = { git = "https://github.com/AndrielFR/grammers-friendly", features = [ "macros" ] }
grammers-client = { git = "https://github.com/Lonami/grammers", features = [ "html" ] }
rust-anilist = { git = "https://github.com/AndrielFR/rust-anilist" }

rbs = "4"
log = "*"
rand = "*"
toml = "*"
tokio = { version = "1", default-features = false, features = [ "macros", "sync", "signal" ] }
serde = { version = "1", features = ["derive"] }
chrono = "*"
rbatis = "4"
dotenvy = "*"
reqwest = "*"
env_logger = "*"
serde_json = "1"
async-trait = "*"
rbdc-sqlite = "4"
futures-util = { version = "*", default-features = false, features = [ "alloc" ] }
rbdc-pool-deadpool = "4"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
